init database model

--- a/ABTechApp/ABTechApp/Web.config
+++ b/ABTechApp/ABTechApp/Web.config
@@ -11,8 +11,8 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ABTechApp-20200511094149.mdf;Initial Catalog=aspnet-ABTechApp-20200511094149;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="ABTECH" connectionString="Data Source=saher;Initial Catalog=ABTECH;Integrated Security=True" providerName="System.Data.SqlClient" />
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
