--- a/ABTechApp/ABTechApp/ABTechApp.csproj
+++ b/ABTechApp/ABTechApp/ABTechApp.csproj
@@ -170,12 +170,27 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202005111946394_InitialCreate.cs" />
+    <Compile Include="Migrations\202005111946394_InitialCreate.Designer.cs">
+      <DependentUpon>202005111946394_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202005111948511_init.cs" />
+    <Compile Include="Migrations\202005111948511_init.Designer.cs">
+      <DependentUpon>202005111948511_init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202005112001086_init1.cs" />
+    <Compile Include="Migrations\202005112001086_init1.Designer.cs">
+      <DependentUpon>202005112001086_init1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Order.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -238,6 +253,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Order\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -251,6 +267,17 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202005111946394_InitialCreate.resx">
+      <DependentUpon>202005111946394_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005111948511_init.resx">
+      <DependentUpon>202005111948511_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005112001086_init1.resx">
+      <DependentUpon>202005112001086_init1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
