Add Notifications Table

--- a/ABTechApp/ABTechApp/Web.config
+++ b/ABTechApp/ABTechApp/Web.config
@@ -13,7 +13,11 @@
   <connectionStrings>
     <add name="ABTECH" connectionString="Data Source=saher;Initial Catalog=ABTECH;Integrated Security=True" providerName="System.Data.SqlClient" />
 
+    <!--<add name="ABTechAppTest" connectionString="Data Source=SQL5033.site4now.net;Initial Catalog=DB_A57487_SaherAbdElazizz;User Id=DB_A57487_SaherAbdElazizz_admin;Password=zxc123456789;" providerName="System.Data.SqlClient" />
+-->
   </connectionStrings>
+
+
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
@@ -24,6 +28,7 @@
     <authentication mode="None"/>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
+    <customErrors mode="Off"/>
   </system.web>
   <system.webServer>
     <modules>
