--- a/ABTechApp/ABTechApp/Web.config
+++ b/ABTechApp/ABTechApp/Web.config
@@ -9,10 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ABTECH" connectionString="Data Source=saher;Initial Catalog=ABTECH;Integrated Security=True" providerName="System.Data.SqlClient" />
-
-    <!--<add name="ABTechAppTest" connectionString="Data Source=SQL5033.site4now.net;Initial Catalog=DB_A57487_SaherAbdElazizz;User Id=DB_A57487_SaherAbdElazizz_admin;Password=zxc123456789;" providerName="System.Data.SqlClient" />
+    <!--<add name="ABTECHH" connectionString="Data Source=saher;Initial Catalog=ABTECHHh;Integrated Security=True" providerName="System.Data.SqlClient" />
 -->
+    <add name="ABTechAppTest" connectionString="Data Source=SQL5033.site4now.net;Initial Catalog=DB_A57487_SaherAbdElazizz;User Id=DB_A57487_SaherAbdElazizz_admin;Password=zxc123456789;" providerName="System.Data.SqlClient" />
+
   </connectionStrings>
 
 
